fixed percentage overlapping to top

--- a/css/main.scss
+++ b/css/main.scss
@@ -506,8 +506,8 @@ body {
  }
  .rightnav {
   .card {
-   max-width: 250px;
-   max-height: 250px;
+   max-width: 300px;
+   max-height: 300px;
    padding: 0;
    img {
     margin-top: 0.7rem;
